# joa-qartod-config

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: set-up.md
notebooks/: QartodTestExample_UsingModules.ipynb  QartodTestExample_WaterLevel.ipynb  test_config_generator.ipynb
src/joa_qartod_config/: __init__.py  graphics.py  qartod.py
